# almanac-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  README.rst  codeship-services.yml  codeship-steps.yml  compose.yaml  conf.py  config.ini.default  dev-requirements.txt  docker-compose.swarm.example.yaml  init_db copy.csv.example  justfile  logging.json  pyproject.toml  real-dev-requirements.txt  real-requirements.txt  requirements.txt  setup.py  test-all.sh
.github/workflows/: auto-tag.yaml  ci.yaml  docker-publish.yaml  publish.yaml  pypi-publish.yaml
almanacbot/: __init__.py  almanac-bot.py  almanacbot.py  config.py  constants.py  data_loader.py  epehemeris_sample.json  ephemeris.py  mongodb_client.py  postgresql_client.py  twitter_client.py
mongo/: mongo-init.js
postgres/: init-ephemeris-db.sh
tests/: conftest.py  test_almanacbot.py  test_integration.py  test_postgresql_client.py  test_twitter_client.py
